src/index.css
/* || VARIABLES */

:root {
  --COLOR-PRIMARY: #222831;
  --COLOR-SECONDARY: #393E46;
  --COLOR-ACCENT: #00ADB5;
  --COLOR-CONTRAST: #EEEEEE;
}

/* || CSS RESET */

*, *::before, *::after {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
}

img,
svg {
  display: block;
  max-width: 100%;
}

/* || GENERAL STYLES */

h1 {
  font-size: 3rem;
  font-weight: normal;
}

main {
  padding: 2rem;
  flex-grow: 1;
  background-color: var(--COLOR-SECONDARY);
}

a {
  font-size: 1.25rem;
  color: var(--COLOR-CONTRAST);
  text-decoration: none;
}

a:hover {
  color: var(--COLOR-ACCENT);
}

a:active {
  opacity: 0.7;
}

/* || APP STYLES */

.App {
  min-height: 100vh;
  display: flex;
  flex-flow: column;
}

/* || HEADER STYLES */

.Header {
  padding: 2rem;
  background-color: var(--COLOR-PRIMARY);
  color: var(--COLOR-CONTRAST);
}

@media (max-width: 60em) {
  .Header {
    padding: 1rem;
    text-align: center;
  }
}

.nav-links {
  display: flex;
  justify-content: end;
  gap: 2rem;
}

@media (max-width: 60em) {
  .nav-links {
    justify-content: center;
    gap: 1rem;
    margin-top: 1rem;
  }
}

/* || HOMEPAGE STYLES */

.Home {
  display: grid;
  gap: 3rem;
  place-items: center;
}

@media (min-width: 60em) {
  .Home {
    grid-template-columns: repeat(4, 1fr);
    gap: 5rem;
  }
}

.Card {
  padding: 2rem;
  background-color: var(--COLOR-PRIMARY);
  color: var(--COLOR-CONTRAST);
}

.Card:hover {
  opacity: 0.7;
  cursor: pointer;
}

.Card > * {
  margin-top: 1rem;
  text-align: center;
}

/* || CATS AND DOGS FACTS PAGE STYLES */

.CatsAndDogsFacts {
  display: grid;
  place-content: center;
}

.CatsAndDogsFacts .container {
  max-width: 50rem;
  display: grid;
  gap: 2rem;
}

@media (min-width: 60em) {
  .CatsAndDogsFacts .container {
    grid-template-areas:
    "image controls"
    "image content"
    "image content"
    "image content";
    align-items: center;
  }
}

.CatsAndDogsFacts img {
  justify-self: center;
}

@media (min-width: 60em) {
  .CatsAndDogsFacts img {
    grid-area: image;
  }
}

.CatsAndDogsFacts .controls {
  display: flex;
  justify-content: space-evenly;
}

@media (min-width: 60em) {
  .CatsAndDogsFacts .controls {
    grid-area: controls;
  }
}

.CatsAndDogsFacts button {
  font-size: 1.5rem;
  padding: 0.5em 1em;
  background-color: var(--COLOR-PRIMARY);
  color: var(--COLOR-CONTRAST);
}

.CatsAndDogsFacts p {
  font-size: 1.5rem;
  color: var(--COLOR-CONTRAST);
}

@media (min-width: 60em) {
  .CatsAndDogsFacts p {
    grid-area: content;
  }
}

/* || JOKES PAGE STYLES */

.Jokes {
  display: grid;
  place-content: center;
}

.Jokes .container {
  max-width: 50rem;
}

.Jokes p {
  font-size: 1.5rem;
  color: var(--COLOR-CONTRAST);
}

.Jokes button {
  font-size: 1.25rem;
  padding: 0.5em 1em;
  background-color: var(--COLOR-PRIMARY);
  color: var(--COLOR-CONTRAST);
}

.Jokes .container > * {
  margin-top: 1.5rem;
}

/* || ABOUT PAGE STYLES */

.About p {
  font-size: 1.5rem;
  margin-top: 1rem;
  color: var(--COLOR-CONTRAST);
}

.About .highlight {
  font-size: 1.5rem;
  color: var(--COLOR-ACCENT);
}

/* || FOOTER STYLES */

.Footer {
  padding: 1rem;
  background-color: var(--COLOR-PRIMARY);
  color: var(--COLOR-CONTRAST);
}

.Footer p {
  font-size: 1.25rem;
  text-align: center;
}

